WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59034
[WinCairo] Missing WebMutableURLRequest::mutableCopy implementation prevents DumpRenderTree from running
https://bugs.webkit.org/show_bug.cgi?id=59034
Summary
[WinCairo] Missing WebMutableURLRequest::mutableCopy implementation prevents ...
Brent Fulgham
Reported
2011-04-20 16:28:30 PDT
DumpRenderTree has not been functional under WinCairo for the better part of a year. I finally tracked the cause down to the use of 'mutableCopy' for resource requests in the DumpRenderTree logic. This attached patch provides an implementation of this logic for the cURL-based WinCairo port so that DumpRenderTree works properly again.
Attachments
Patch
(1.26 KB, patch)
2011-04-20 16:35 PDT
,
Brent Fulgham
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2011-04-20 16:35:14 PDT
Created
attachment 90441
[details]
Patch
Brent Fulgham
Comment 2
2011-04-20 16:47:31 PDT
Landed in
http://trac.webkit.org/changeset/84435
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug