Provide missing implementation of WebMutableURLRequest::mutableCopy. This was preventing DumpRenderTree from working properly under the WinCairo port. https://bugs.webkit.org/show_bug.cgi?id=59034

Reviewed by Martin Robinson.

* WebMutableURLRequest.cpp:
(WebMutableURLRequest::mutableCopy): Implement cURL version of the
copy operation.



Canonical link: https://commits.webkit.org/74174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84435 268f45cc-cd09-0410-ab3c-d52691b4dbfc